Login and registro layouts created, registro working, login not working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".AnadirArticulo" />
         <activity android:name=".PaginaArticulos" />
+        <activity android:name=".Login" />
+        <activity android:name=".Registro" />
     </application>
 
 </manifest>
