Added Permission and Metadata to AndroidManifest!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.alu2015059.jstyle">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--
+              The API key for Google Maps-based APIs is defined as a string resource.
+              (See the file "res/values/google_maps_api.xml").
+              Note that the API key is linked to the encryption key used to sign the APK.
+              You need a different API key for each encryption key, including the release key that is used to
+              sign the APK for publishing.
+              You can define the keys for the debug and release targets in src/debug/ and src/release/.
+         -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDz1_wfflVFwgxNqJXDDz382ZfWgaer1ks" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +34,11 @@
         <activity android:name=".Service.MostrarArticulos.PaginaArticulos" />
         <activity android:name=".Service.Login_VersionBeta.Login" />
         <activity android:name=".Service.Login_VersionBeta.Registro" />
-        <activity android:name=".Service.Mapa.MarcadorMapa"/>
         <!--
         <activity android:name=".Service.MostrarArticulos.ArticulosAdapter"/>
         -->
+        <activity
+            android:name="com.example.alu2015059.jstyle.Service.Mapa.MapsActivity"
+            android:label="@string/title_activity_maps" />
     </application>
-
 </manifest>
